# monkey_banana_party_pack

./: .gitignore
alacritty/: alacritty.yml
awesome/: plugins.sh  rc.lua  theme-hermes.lua  theme-zoidberg.lua  theme.lua  xephyr.sh
bash/: anki.sh  bash_profile  bashrc  br.sh  dir_colors  fzf.sh  history.sh  ls.sh  misc.sh  prompt.sh  terminal.sh
firefox/: userChrome.css
gdb/: gdbinit
git/: gitconfig
greenclip/: greenclip.toml
i3/: config  config.zoidberg
i3status/: config  config.zoidberg
lf/: lfrc
nvim/: init.vim
nvim/UltiSnips/: all.snippets  c.snippets  cpp.snippets  python.snippets  sh.snippets
nvim/agda/ftdetect/: agda.vim
nvim/colors/: mycolors.vim
nvim/mycolors/colors/: mycolors.vim
nvim/mysnippets/UltiSnips/: c.snippets  cpp.snippets
nvim/snippets_vscode/: all.json  c.json  cpp.json  package.json  python.json  sh.json
nvim/syntax/: agda.vim
picom/: picom.conf
pysrc/: dirlist  dirlist_cmd.py  filelist  filelist.py  mypy.ini
readline/: inputrc
rust/: Cargo.toml
rust/src/: errorfile.rs  main.rs  my_fd.rs  my_prompt.rs  my_status.rs
screen/: screenrc
src/: CMakeLists.txt  dirlist.cc  filelist.cc  plumb.cc  scandir.cc
ssh/: config
systemd/: nvidia.shutdown
systool/: systool  util.py
tmux/: tmux.conf
vim/: vimrc
vim/mysnippets/UltiSnips/: all.snippets  c.snippets  cpp.snippets  python.snippets
vim/syntax/: agda.vim
x11/: XCompose  Xresources  Xresources-hermes  xinitrc  xinitrc-awesome-farnsworth  xinitrc-awesome-hermes  xinitrc-awesome-zoidberg  xinitrc-dwm-farnsworth  xinitrc-dwm-hermes  xinitrc-i3  xinitrc.dwm  xinitrc.dwm.hermes  xinitrc.i3
x11/Xresources.d/: rxvt-unicode
x11/hermes/: 99-touchpad.conf
x11/xorg.conf.d-hermes/: 99-trackpoint.conf
