[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "*"
argh = "*"
walkdir = "*"
strip-ansi-escapes = "*"
libc = "*"

[[bin]]
name = "my_prompt"
path = "src/my_prompt.rs"

[[bin]]
name = "my_fd"
path = "src/my_fd.rs"

[[bin]]
name = "errorfile"
path = "src/errorfile.rs"

[[bin]]
name = "my_status"
path = "src/my_status.rs"

[profile.release]
overflow-checks = true
